solved card design problem such as overflow out of the div

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -18,7 +18,7 @@
 
 .card-company {
   overflow: hidden;
-  width: 90%;
+  width: 100%;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
